# spencer_supervisor

./: .gitignore
appl/: CMakeLists.txt  CMakeLists.txt~  out.policy  package.xml  package.xml~
appl/Sandbox/Models/MOMDP/: Map2D.cpp  Map2DPath.cpp  Move2DPathFollowerActPosHasGuideNoisyVarRel.cpp  Move2DPathFollowerActPosHasGuideNoisyVarRel.h  Move2DPathFollowerActPosVarRel.cpp  Move2DPathFollowerActPosVarRel.h  Move2DVarRel.cpp  NoisyVariableRel.cpp  NoisyVariableRel.h  ObservationProbabilitiesByFunction.cpp  ObservationProbabilitiesByFunction.h  RewardAtGoal.cpp  RewardAtGoal.h  RewardsByFunction.cpp  RewardsByFunction.h  StateTransitionXYByFunction.h  TerminationVarPaddedRel.cpp  TriggerVarRel.cpp  TriggerVarRel.h
appl/Sandbox/Models/MOMDP/CoLoc/: CoLoc.cpp  ProblemParams.h
appl/catkin_generated/: env_cached.sh  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
appl/catkin_generated/installspace/: _setup_util.py  appl-msg-paths.cmake  appl.pc  applConfig.cmake
appl/catkin_generated/stamps/appl/: package.xml
appl/cmake/: appl-genmsg-context.py  appl-genmsg.cmake
appl/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
appl/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
appl/devel/include/appl/: appl_request.h  appl_requestRequest.h  appl_requestResponse.h
appl/devel/lib/appl/: controlpipe
appl/devel/lib/pkgconfig/: appl.pc
appl/devel/lib/python2.7/dist-packages/appl/srv/: __init__.py  _appl_request.py
appl/devel/share/appl/cmake/: applConfig.cmake
appl/devel/share/common-lisp/ros/appl/srv/: _package.lisp  _package_appl_request.lisp  appl-srv.asd  appl_request.lisp
appl/doc/: README
appl/doc/POLICYX/: Tiger.policy  policyx.xsd
appl/gtest/: Makefile
appl/src/: CHANGELOG.txt  Makefile  README.txt  pomdpconvert  tiger.policy
appl/src/Controller/: Controller.cpp  Controller.h  controlpipe.cpp  controlpipe.cpp~
appl/src/Models/MOMDP/: BeliefTransitionMOMDPLite.cpp
appl/src/Parser/: ParserSelector.cpp
appl/src/Parser/POMDPX/: CHANGELOG
appl/src/Sandbox/Models/MOMDP/: InRangeAllNto1VarRel.cpp  InRangeAllNto1VarRel.h  Map2D.h  Map2DPath.h  Map2DPosValue.cpp  Map2DPosValue.h  Map2DPosVar.cpp  Map2DPosVar.h  Move2DVarRel.h  Obs2DBeaconNoisy.cpp  Obs2DBeaconNoisy.h  RewardMovementCostRel.cpp  RewardMovementCostRel.h  RewardOnPath.cpp  RewardOnPath.h  StateTransitionXByFunction.cpp  StateTransitionXByFunction.h  StateTransitionXYByFunction.cpp  TerminationVarPaddedRel.h
appl/src/Sandbox/Models/MOMDP/CoLoc/: CoLoc.h
appl/src/appl/srv/: _appl_request.py
appl/srv/: appl_request.srv~
goal_manager/: CMakeLists.txt  package.xml
goal_manager/src/: goal_manager.cpp
navigation_planner/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  package.xml
navigation_planner/src/: navigation_planner.cpp
robot_guide/: CMakeLists.txt  package.xml
robot_guide/include/robot_guide/: check_status.h  control_speed_pomdp.h  guide_pomdp.h  observation_manager.h  pomdp_interface.h  spencer.sublime-project  spencer.sublime-workspace  spencer.sublime-workspace.orig  spencer_map.h  supervision_timer.h
robot_guide/launch/: robot_guide.launch  robot_guide_sim.launch
robot_guide/scripts/: guide_group.py
robot_guide/src/: check_status.cpp  control_speed_pomdp.cpp  guide_pomdp.cpp  map_info.cpp  observation_manager.cpp  pomdp_interface.cpp  robot_guide.cpp  robot_guide.cpp.orig  spencer_map.cpp  supervision_timer.cpp
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/include/robot_navigation/: database_queries.h  map_info.h  path_length.h  path_publisher.h  spencer_map.h
robot_navigation/launch/: robot_navigation.launch  robot_navigation_sim.launch  robot_navigation_with_situation_assessment.launch
robot_navigation/src/: database_queries.cpp  map_info.cpp  path_length.cpp  path_publisher.cpp  robot_navigation.cpp  robot_navigation.cpp.orig  spencer_map.cpp  tinyxml2.cpp
robot_status_simulator/: CMakeLists.txt  package.xml
robot_status_simulator/src/: robot_status_simulator.cpp
spencer_goal_manager/: CMakeLists.txt  package.xml
spencer_goal_manager/include/spencer_goal_manager/: status_manager.h
spencer_goal_manager/src/: spencer_goal_manager.cpp  status_manager.cpp
spencer_status/: CMakeLists.txt  package.xml
spencer_status/include/spencer_status/: check_status.h
spencer_status/src/: check_status.cpp  spencer_status.cpp
supervision_msgs/: CMakeLists.txt
supervision_msgs/action/: GuideGroup.action  MoveTo.action  MoveToPose.action
supervision_msgs/msg/: SupervisionStopped.msg
supervision_parameters/: CMakeLists.txt  package.xml  supervision_config.yaml  supervision_config.yaml.orig
